【优化】启动器优化