@@ -485,6 +485,7 @@
                             <arg>-Xlint:deprecation</arg>
                             <arg>--add-opens=java.base/java.lang=ALL-UNNAMED</arg>
                             <arg>--add-opens=java.base/java.util=ALL-UNNAMED</arg>
+                            <arg>--add-opens=java.base/jdk.internal.reflect=ALL-UNNAMED</arg>
                             <arg>--add-exports=java.base/sun.security.pkcs=ALL-UNNAMED</arg>
                             <arg>--add-exports=java.base/sun.reflect.annotation=ALL-UNNAMED</arg>
                             <arg>--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
